# Mesh-Paramterization

./: README.md  config.h  config.h.in
examples/test_data/: ExhaustManifold_hi.m  MaxPlanck.m  head.ply2  knotty_hi.m
include/GI/: gi.h
projects/expanduv/: expanduv.sln  expanduv.vcxproj  genpov.bat  main.cpp  mesh_model__begin.txt  mesh_model__end.txt  povenvCopy.bat  povray.bat  texture.txt  動画変換.bat  自動レンダリングバッチ生成.bat
projects/parameterize_mesh/: parameterize_mesh.cpp  parameterize_mesh.h  parameterize_mesh.hpp  parameterize_mesh.vcxproj
projects/parameterize_mesh_Test/: main.cpp  parameterize_mesh_Test.vcxproj
projects/polygonUVSrf/: ReadMe.txt  TriBasic.h  TriBasic.h.bak  c_poly2freesrf.h  c_poly2freesrfTst.c  mesh_points.cpp  mesh_points.h  poly2freesrf.cpp  poly2freesrf.h  polygonUVSrf.vcxproj
projects/visual_studio_build/: OpenGI.sln  OpenGI.vcproj  OpenGI.vcxproj  clearn.bat  test.bat
qd/include/qd/: dd_inline.h  dd_real.h  qd_config.h
src/: Mainpage.dox  Makefile.am  Makefile.in  README  cylinder.h  gi_blas.c  gi_blas.h  gi_container.c  gi_container.h  gi_context.c  gi_context.h  gi_cutter.c  gi_cutter.c.bak  gi_cutter.h  gi_gl.c  gi_gl.h  gi_image.c  gi_image.h  gi_math.c  gi_math.h  gi_memory.c  gi_memory.h  gi_mesh.c  gi_mesh.h  gi_multiresolution.c  gi_multiresolution.h  gi_numerics.c  gi_numerics.h  gi_parameterizer.c  gi_parameterizer.c.bak  gi_parameterizer.h  gi_sampler.c  gi_sampler.h  gi_thread.c  gi_thread.h  my_gl.c  my_gl.h  my_type.cpp  my_types.h
x64/lib/: polygonUVSrf.lib
